--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,5 +74,6 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
-
+    //location service
+    implementation "com.google.android.gms:play-services-location:15.0.1"
 }
